--- a/packages/todos_repository/analysis_options.yaml
+++ b/packages/todos_repository/analysis_options.yaml
@@ -2,3 +2,4 @@ include: package:very_good_analysis/analysis_options.6.0.0.yaml
 analyzer:
   errors:
     public_member_api_docs: ignore
+    unnecessary_library_directive: ignore
